# x-way-test-task

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  celery.py  celeryconfig.py  settings.py  urls.py
backend_service/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend_service/management/commands/: fetch_albums.py
backend_service/migrations/: 0001_initial.py  0002_auto_20210608_1642.py  0003_auto_20210608_2107.py
backend_service/services/: http_client.py  photos.py
backend_service/templates/: album.html  base.html  index.html
backend_service/utils/: multithreading.py  parts.py
static/css/: style.css
templates/registration/: logged_out.html  login.html
